# benchmark-creator

./: README.md  pyproject.toml  qa_report.md
src/pdf_q_a_automation_crew_design/: crew.py  main.py
src/pdf_q_a_automation_crew_design/config/: agents.yaml  tasks.yaml
