[project]
name = "pdf_q_a_automation_crew_design"
version = "0.1.0"
description = "pdf_q_a_automation_crew_design using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.79.4,<1.0.0"
]

[project.scripts]
pdf_q_a_automation_crew_design = "pdf_q_a_automation_crew_design.main:run"
run_crew = "pdf_q_a_automation_crew_design.main:run"
train = "pdf_q_a_automation_crew_design.main:train"
replay = "pdf_q_a_automation_crew_design.main:replay"
test = "pdf_q_a_automation_crew_design.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
